# moni_score_test_back

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yaml
config/: asgi.py  settings.py  urls.py  worker.py  wsgi.py
moni_client/: service.py
openapi/: apps.py  urls.py  views.py
openapi/templates/: swagger-ui.html
scoring/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
scoring/migrations/: 0001_initial.py
shared/: exceptions.py  models.py  pagination.py  utils.py
tests/: conftest.py  settings.py  test_persona.py  test_score.py
